--- a/src/main/webapp/WEB-INF/src/folder1/file1.html
+++ b/src/main/webapp/WEB-INF/src/folder1/file1.html
@@ -7,11 +7,8 @@
 <scrpit></scrpit>
 <body>
 	<span></span>
-	<span></span>
-	<span></span>
-	<span></span>
-	<span></span>
-	<span></span>
-	<span></span>
+	<table>
+		<td></td>
+	</table>
 </body>
 </html>
