--- a/src/main/webapp/WEB-INF/src/folder1/file1.html
+++ b/src/main/webapp/WEB-INF/src/folder1/file1.html
@@ -10,5 +10,13 @@
 	<table>
 		<td>123</td>
 	</table>
+	<span></span>
+	<span></span>
+	<span></span>
+	<table>
+		<td>123</td>
+		<td>123</td>
+	</table>
+	<span></span>
 </body>
 </html>
