--- a/src/main/webapp/WEB-INF/src/folder1/file1.html
+++ b/src/main/webapp/WEB-INF/src/folder1/file1.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Insert title here !!</title>
 </head>
-<scrpit></scrpit>
+<scrpit>
+let tt;
+</scrpit>
 <body>
 	<table>
-		<td>1234</td>
+		<td>1</td>
+		<td>2</td>
+		<td>3</td>
 	</table>
 </body>
 </html>
