--- a/src/main/webapp/WEB-INF/src/folder1/file1.html
+++ b/src/main/webapp/WEB-INF/src/folder1/file1.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here !!</title>
+<title>Insert title here !!!!</title>
 </head>
 <scrpit>
-let tt;
+	let tt1;
+	let tt2;
+	let tt3 = tt1+tt2;
 </scrpit>
 <body>
 	<table>
@@ -13,5 +15,10 @@ let tt;
 		<td>2</td>
 		<td>3</td>
 	</table>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
 </body>
 </html>
