충돌테스트

--- a/src/main/webapp/WEB-INF/src/folder1/file1.html
+++ b/src/main/webapp/WEB-INF/src/folder1/file1.html
@@ -8,17 +8,9 @@
 	let tt1;
 	let tt2;
 	let tt3 = tt1+tt2;
+	alert("충돌좀 그만 나라..");
 </scrpit>
 <body>
-	<table>
-		<td>1</td>
-		<td>2</td>
-		<td>3</td>
-	</table>
-	<span></span>
-	<span></span>
-	<span></span>
-	<span></span>
-	<span></span>
+	<table></table>
 </body>
 </html>
